<resources>
    <string name="app_name">MyWallet</string>
    <string name="text_name_account">Nombre de la cuenta</string>
    <string name="text_type_account">Tipo de cuenta</string>
    <string name="text_balance_initial_account">Saldo Inicial</string>
    <string name="text_save">Guardar</string>
    <string name="text_required">Campo Requerido</string>
    <string name="text_accounts">Cuentas</string>
    <string name="txt_new_account">Nueva cuenta</string>
    <string name="text_category">Categorias</string>
    <string name="text_new_category">Nueva Categoría</string>
    <string name="text_cancel">Cancelar</string>
    <string name="txt_create">Crear</string>
    <string name="text_name">Nombre</string>
    <string name="txt_select_color">Seleccionar color</string>
    <string name="txt_color">Color</string>
    <string name="txt_save_category">Se guardo la categoria</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contrasena</string>
    <string name="ingresa_usuario">Ingresa usuario</string>
    <string name="ingresa_contrase_a">Ingresa contraseña</string>
    <string name="contrase_a">contraseña</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="contrase_a3">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="correo">Correo</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registra">Registra</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_su_apellido">Ingrese su apellido</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_su_edad">Ingrese su edad</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="ingrese_su_contrase_a_otra_vez">Ingrese su contraseña otra vez</string>
</resources>